# data-buddy

./: .gitignore  README.md  data_generator.py  inline_ch.ipynb  pyproject.toml
.github/workflows/: pypi-publish.yml
data_buddy/connectors/: file_connector.py
data_warp/connectors/: utils.py
tests/connectors/: test_base_connector.py  test_database_connector.py  test_file_connector.py  test_sources.py  test_utils.py
